@@ -7,7 +7,7 @@ use Apache::TestRequest;
 use Apache::TestUtil;
 
 plan tests => 4, \&need_lwp;
-my $r = GET('/css/foo-foo.bar.css');
+my $r = GET('/css/foo~foo.bar.css');
 
 ok( $r->code() == 200 );
 ok( $r->content() =~ /foo/sm  );
